--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 				<img src="images/page3-avatar2.png" class="avatar">
 				<img src="images/page3-bg.png" class="p3-bg">
 				<img src="images/page3-name.png" class="p3-name ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="1.2s" swiper-animate-delay="2.7s">
-				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.5s" swiper-animate-delay="3.4s">
+				<img src="images/page3-para.png" class="p3-para ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1.2s" swiper-animate-delay="3.4s">
 				<div class="u-arrow-bottom">
 					<img src="images/arrow.png">
 				</div>
@@ -86,12 +86,13 @@
 				<img src="images/page6-title2.png" class="t2 ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="1.9s">
 				<div class="para">
 					<img src="images/page6-para1.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="2.5s">
-					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.2s">
-					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="1s" swiper-animate-delay="3.9s">
+					<img src="images/page6-para2.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.9s" swiper-animate-delay="3.2s">
+					<img src="images/page6-para3.png" class="ani" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.8s" swiper-animate-delay="3.9s">
 				</div>
 				<div class="footer ani" swiper-animate-effect="zoomIn" swiper-animate-duration="1.5s" swiper-animate-delay="4.8s">
 					<a href="wwww.la-chance.net"><img src="images/logo.png"></a>
 					<p>wwww.la-chance.net</p>
+					<img src="images/finger.png" id="finger">
 				</div>
 			</div>
 		</div>
