--- a/index.html
+++ b/index.html
@@ -155,6 +155,10 @@
     			$('.t1').css({'top':'45%','opacity':'0'});
     		}
     	}) 
+
+	$('body').tap(function(event){
+		event.preventDefaule();
+	})
 }       
 </script>
 </body>
