--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 	<script src="js/swiper.animate1.0.2.min.js"></script>
 	<script>        
 		window.onload = function(){
+			alert('3');
 			var mySwiper = new Swiper ('.swiper-container', {
 				direction: 'vertical',
 				width: window.innerWidth,
@@ -159,6 +160,9 @@
 	$('body').tap(function(event){
 		event.preventDefaule();
 	})
+	$('body').click(function(event) {
+		event.preventDefaule();
+	});
 }       
 </script>
 </body>
