--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@
     	}) 
 
 	$('body').tap(function(event){
-		event.preventDefaule();
+		event.preventdefault();
 	})
 	$('body').click(function(event) {
-		event.preventDefaule();
+		event.preventdefault();
 	});
 }       
 </script>
