--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 	<script src="js/swiper.animate1.0.2.min.js"></script>
 	<script>        
 		window.onload = function(){
-			alert('3');
+			alert('5');
 			var mySwiper = new Swiper ('.swiper-container', {
 				direction: 'vertical',
 				width: window.innerWidth,
@@ -157,12 +157,14 @@
     		}
     	}) 
 
-	$('body').tap(function(event){
-		event.preventdefault();
-	})
-	$('body').click(function(event) {
-		event.preventdefault();
-	});
+	// $('body').tap(function(event){
+	// 	event.preventdefault();
+	// })
+	// $('body').click(function(event) {
+	// 	event.preventdefault();
+	// });
+
+	$('.swiper-container').height(window.innerHeight);
 }       
 </script>
 </body>
