test product css

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<div class="planning-02 smallbox planning"><a href="planning.html#sec-03"><span>运营</span></a></div>
 			<div class="planning-03 smallbox planning"><a href="planning.html#sec-02"><span>推广</span></a></div>
 
-			<footer><a href="product.html">案例 & 合作伙伴<span></span></a></footer>
+			<footer><a href="product.html">合作伙伴&nbsp;&nbsp;&&nbsp;&nbsp;联系方式<span></span></a></footer>
 
 		</section>
 	</div>
