--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 	</header>
 	<section class="md-gallery">
 		<div class="gallery-container">
-			<ul>
+			<ul class="ul">
 				<li><a href=""><img src="images/1.jpg"></a></li>
 				<li><a href=""><img src="images/2.jpg"></a></li>
 				<li><a href=""><img src="images/3.jpg"></a></li>
@@ -42,6 +42,40 @@
 				<li><a href=""><img src="images/7.jpg"></a></li>
 				<li><a href=""><img src="images/8.jpg"></a></li>
 				<li><a href=""><img src="images/9.jpg"></a></li>
+
+				<li><a href=""><img src="images/10.jpg"></a></li>
+				<li><a href=""><img src="images/11.jpg"></a></li>
+				<li><a href=""><img src="images/12.jpg"></a></li>
+				<li><a href=""><img src="images/13.jpg"></a></li>
+				<li><a href=""><img src="images/14.jpg"></a></li>
+				<li><a href=""><img src="images/15.jpg"></a></li>
+				<li><a href=""><img src="images/16.jpg"></a></li>
+				<li><a href=""><img src="images/17.jpg"></a></li>
+				<li><a href=""><img src="images/18.jpg"></a></li>
+
+				<li><a href=""><img src="images/19.jpg"></a></li>
+				<li><a href=""><img src="images/20.jpg"></a></li>
+				<li><a href=""><img src="images/21.jpg"></a></li>
+				<li><a href=""><img src="images/22.jpg"></a></li>
+				<li><a href=""><img src="images/23.jpg"></a></li>
+				<li><a href=""><img src="images/24.jpg"></a></li>
+				<li><a href=""><img src="images/25.jpg"></a></li>
+				<li><a href=""><img src="images/26.jpg"></a></li>
+				<li><a href=""><img src="images/27.jpg"></a></li>
+
+				<li><a href=""><img src="images/28.jpg"></a></li>
+				<li><a href=""><img src="images/29.jpg"></a></li>
+				<li><a href=""><img src="images/30.jpg"></a></li>
+				<li><a href=""><img src="images/31.jpg"></a></li>
+				<li><a href=""><img src="images/32.jpg"></a></li>
+				<li><a href=""><img src="images/33.jpg"></a></li>
+				<li><a href=""><img src="images/34.jpg"></a></li>
+				<li><a href=""><img src="images/35.jpg"></a></li>
+				<li><a href=""><img src="images/36.jpg"></a></li>
+
+				<li><a href=""><img src="images/37.jpg"></a></li>
+				<li><a href=""><img src="images/38.jpg"></a></li>
+				<li><a href=""><img src="images/39.jpg"></a></li>
 			</ul>
 		</div>
 	</section>
@@ -80,6 +114,7 @@
 				$('.show-pic').hide();
 				$('.mask').hide();
 				$('.gallery-container li').removeClass();
+				timer = setInterval(moveUl,20);
 				return false;
 			});
 			$('.left-arrow').click(function(event) {
@@ -110,31 +145,64 @@
 			});
 
 
+			var $ul = $('.ul');
+			var timer;
+			var oldTop;
+			var ulHeight = $ul.height();
+			$ul[0].innerHTML += $ul[0].innerHTML;
 
-			var $mainDiv = $(".gallery-container ul");
-			var html = '';
-			var displayedImg = 9;
-			var allImg = 39;
-			var oldPic;
-			var scrollTime = 0
-			$(window).scroll(function(event) {
-				var pageH = $(document).height()
-            	var scrollT = $(window).scrollTop(); //滚动条top   
-            	var winheight=$(window).height();
-            	if ((parseInt(scrollT)+parseInt(winheight)+290>=parseInt(pageH))&&(displayedImg<allImg)) {
-            		scrollTime++;
-            		oldPic = displayedImg;
-            		displayedImg = allImg - oldPic>9 ? oldPic+9 : allImg;
-            		for (var i = oldPic+1; i < displayedImg+1; i++) {
-            			html += '<li><a href=""><img src="images/'+i+'.jpg"></a></li>';
-            		};
 
-            		$mainDiv.append(html);
-            		html = '';
-            	}
-            });
+			setTimeout(function(){
+				timer = setInterval(moveUl,20);
+			},10)
 
-		});
+			function moveUl () {
+				if (parseInt($ul.css('top')) < -ulHeight) {
+					$ul.css('top',0);
+				}
+				$ul.css('top','-=1px');
+			}
+
+			$('.gallery-container').mouseover(function(event) {
+				clearInterval(timer);
+			});
+
+			$('.gallery-container').mouseout(function(event) {
+
+				if ($('.show-pic').is(':visible')) {
+					return
+				} else {
+					timer = setInterval(moveUl,20);
+				}
+			});
+
+
+
+
+			// var $mainDiv = $(".gallery-container ul");
+			// var html = '';
+			// var displayedImg = 9;
+			// var allImg = 39;
+			// var oldPic;
+			// var scrollTime = 0
+			// $(window).scroll(function(event) {
+			// 	var pageH = $(document).height()
+   //          	var scrollT = $(window).scrollTop(); //滚动条top   
+   //          	var winheight=$(window).height();
+   //          	if ((parseInt(scrollT)+parseInt(winheight)+290>=parseInt(pageH))&&(displayedImg<allImg)) {
+   //          		scrollTime++;
+   //          		oldPic = displayedImg;
+   //          		displayedImg = allImg - oldPic>9 ? oldPic+9 : allImg;
+   //          		for (var i = oldPic+1; i < displayedImg+1; i++) {
+   //          			html += '<li><a href=""><img src="images/'+i+'.jpg"></a></li>';
+   //          		};
+
+   //          		$mainDiv.append(html);
+   //          		html = '';
+   //          	}
+   //          });
+
+});
 </script>
 </body>
 </html>
