--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
 				if (parseInt($ul.css('top')) < -ulHeight) {
 					$ul.css('top',0);
 				}
+				console.log($ul.css('top'));
 				$ul.css('top','-=1px');
 			}
 
