--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
 			var timer;
 			var oldTop;
 			var ulHeight = $ul.height();
+			alert(ulHeight);
 			$ul[0].innerHTML += $ul[0].innerHTML;
 
 
