--- a/index.html
+++ b/index.html
@@ -148,8 +148,7 @@
 			var $ul = $('.ul');
 			var timer;
 			var oldTop;
-			var ulHeight = $ul.height();
-			alert(ulHeight);
+			var ulHeight = 2368;
 			$ul[0].innerHTML += $ul[0].innerHTML;
 
 
