--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@
     loop: true,
     autoplay: 5000,
     speed: 600,
+    autoplayDisableOnInteraction: false,
     
     // 如果需要分页器
     // pagination: '.swiper-pagination',
