--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 <body>
 	<div class="swiper-container" id="main-swiper">
 		<div class="swiper-wrapper">
-			<div class="swiper-slide" id="silde1">Slide 1</div>
+			<div class="swiper-slide" id="slide1">
+				<img src="images/s1-circle1.png" id="s1-c1" class="circle">
+<!-- 				<img src="images/s1-circle2.png" id="s1-c2" class="circle">
+				<img src="images/s1-circle3.png" id="s1-c3" class="circle"> -->
+			</div>
 			<div class="swiper-slide">Slide 2</div>
 			<div class="swiper-slide">Slide 3</div>
 		</div>
@@ -37,7 +41,8 @@
 			fade: {
 				crossFade: true,
 			}
-		})       
+		})
+		$('#s1-c1').css('top',parseInt($(window).width())*0.27);      
 	</script>
 </body>
 </html>
