--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 		<div class="swiper-wrapper">
 			<div class="swiper-slide" id="slide1">
 				<img src="images/s1-circle1.png" id="s1-c1" class="circle">
-<!-- 				<img src="images/s1-circle2.png" id="s1-c2" class="circle">
-				<img src="images/s1-circle3.png" id="s1-c3" class="circle"> -->
+				<img src="images/s1-circle2.png" id="s1-c2" class="circle">
+				<!-- <img src="images/s1-circle3.png" id="s1-c3" class="circle"> -->
 			</div>
 			<div class="swiper-slide">Slide 2</div>
 			<div class="swiper-slide">Slide 3</div>
@@ -43,6 +43,7 @@
 			}
 		})
 		$('#s1-c1').css('top',parseInt($(window).width())*0.27);      
+		$('#s1-c2').css('top',parseInt($(window).width())*0.21);      
 	</script>
 </body>
 </html>
