--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<img src="images/s1-subline.png" id="s1-sbl">
 			</div>
 			<div class="swiper-slide" id="slide2">
-				<img src="images/s2-title.png" id="s2-title">
+				<img src="images/s2-title.png" id="s2-title" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" class="ani">
 				<img src="images/s2-robot.png" id="s2-robot">
 				<img src="images/s2-rbline.png" id="s2-rbline">
 				<img src="images/s2-word1.png" id="s2-word1">
@@ -51,6 +51,20 @@
 				effect : 'fade',
 				fade: {
 					crossFade: true,
+				},
+				onInit: function(swiper){ 
+					swiperAnimateCache(swiper); 
+					swiperAnimate(swiper); 
+				}, 
+				onSlideChangeEnd: function(swiper){ 
+					swiperAnimate(swiper);
+					// if (swiper.activeIndex == 1) {
+					// 	alert(1);
+					// 	$('#s2-rbline').slideDown();
+					// }
+				},
+				onTransitionEnd: function(swiper){
+					// alert(1);
 				}
 			})
 			$('#s1-c1').css('top',parseInt($(window).width())*0.27);      
@@ -73,9 +87,41 @@
 			$('#s2-word2').css('top',parseInt($(window).width())*1.14);			
 		});
 
-		function padding(number) {
-			return number < 10 ? "0" + number : "" + number; 
-		}
-	</script>
+function padding(number) {
+	return number < 10 ? "0" + number : "" + number; 
+}
+
+// (function ($) {
+//   $.fn.slideDown = function (duration) {    
+//     // get old position to restore it then
+//     var position = this.css('position');
+
+//     // show element if it is hidden (it is needed if display is none)
+//     this.show();
+
+//     // place it so it displays as usually but hidden
+//     this.css({
+//       position: 'absolute',
+//       visibility: 'hidden'
+//     });
+
+//     // get naturally height
+//     var height = this.height();
+
+//     // set initial css for animation
+//     this.css({
+//       position: position,
+//       visibility: 'visible',
+//       overflow: 'hidden',
+//       height: 0
+//     });
+
+//     // animate to gotten height
+//     this.animate({
+//       height: height
+//     }, duration);
+//   };
+// })(Zepto);
+</script>
 </body>
 </html>
